# epicode-kb

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/api/: agent.rs  auth.rs  collab.rs  health.rs  health_api.rs  mcp.rs  memory.rs  mod.rs  proposal.rs  routes.rs  search.rs  upload.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  model.rs  rbac.rs  service.rs
backend/src/collab/: mod.rs  protocol.rs  room.rs
backend/src/conflict/: detect.rs  mod.rs  model.rs
backend/src/db/: mod.rs  repository.rs  schema.rs
backend/src/db/migrations/: 001_init.sql  002_indexes.sql  003_v2_schema.sql  004_v3_schema.sql
backend/src/dream/: mod.rs  proposal.rs
backend/src/embed/: mod.rs  onnx.rs
backend/src/health/: gaps.rs  mod.rs  orphans.rs  scanner.rs  staleness.rs
backend/src/llm/: deepseek.rs  mod.rs  ollama.rs
backend/src/mcp/: mod.rs  server.rs  sse.rs  stdio.rs  tools.rs
backend/src/memory/: html.rs  mod.rs  model.rs  service.rs
backend/src/notify/: mod.rs  subscriptions.rs  webhook.rs
backend/src/observability/: audit.rs  metrics.rs  mod.rs
backend/src/parse/: docx.rs  markdown.rs  mod.rs  pdf.rs  text.rs
backend/src/search/: fulltext.rs  hybrid.rs  mod.rs  semantic.rs
backend/tests/: auth_test.rs  collab_test.rs  conflict_test.rs  dream_conflict_test.rs  graph_test.rs  health_test.rs  html_test.rs  memory_test.rs  migration_test.rs  parse_test.rs  proposal_test.rs  room_test.rs  search_test.rs
backend/tests/common/: mod.rs
deploy/: .env.example  docker-compose.prod.yml  docker-compose.yml
deploy/helm/epicode-kb/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.yaml
deploy/helm/epicode-kb/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  secret.yaml
docs/: class-diagram.mermaid  sequence-diagram.mermaid
docs/audit/: v3-audit.md
docs/design/: architecture-v2.md  architecture-v3.md  architecture.md
docs/prd/: v1.md  v2.md  v3.md
docs/qa/: v2-qa-report.md  v3-qa-report.md
docs/superpowers/plans/: 2026-06-27-realtime-collab.md
docs/superpowers/specs/: 2026-06-27-realtime-collab-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AwarenessCursors.tsx  ConflictResolutionModal.tsx  Layout.tsx  MemoryCard.tsx  PermissionGuard.tsx  ProvenanceBadge.tsx  SearchFilters.tsx  SidePanel.tsx  TrustIndicator.tsx  UploadZone.tsx
frontend/src/lib/: api.ts  auth.ts  collab.ts  types.ts
frontend/src/pages/: AdminConsole.tsx  AgentIntegration.tsx  ConflictCenter.tsx  Graph.tsx  HealthDashboard.tsx  Home.tsx  Login.tsx  MemoryEditor.tsx  Review.tsx  Search.tsx  SpaceSettings.tsx  Upload.tsx
frontend/src/trpc/: client.ts  router.ts
scripts/: dev.sh
