[package]
name = "epicode-kb"
version = "0.3.0"
edition = "2021"
description = "epicode-kb: Enterprise knowledge base with memory provenance, hybrid search, real-time collaboration, and AI agent integration"
license = "MIT"

[lib]
name = "epicode_kb"
path = "src/lib.rs"

[[bin]]
name = "epicode-kb"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Full-text search
tantivy = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (LLM calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
async-trait = "0.1"
tokio-stream = "0.1"

# Configuration
dotenvy = "0.15"

# Document parsing
pulldown-cmark = "0.11"
pdf-extract = { version = "0.8", optional = true }
docx-rs = { version = "0.4", optional = true }

# ONNX embedding (optional — can be difficult to compile in some environments)
ort = { version = "2.0.0-rc.10", features = ["download-binaries"], optional = true }
tokenizers = { version = "0.19", optional = true }
ndarray = { version = "0.16", optional = true }

# Authentication & authorization
jsonwebtoken = "9"
bcrypt = "0.15"
openidconnect = { version = "3", optional = true }

# Collaboration CRDT
yrs = "0.21"

# Observability
prometheus = "0.13"

# Cryptography / API keys
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"

# HTTP client for webhooks
ureq = "2.10"

[features]
default = []
# Enable real ONNX embedding inference.
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]
# Enable PDF text extraction.
pdf = ["dep:pdf-extract"]
# Enable DOCX text extraction.
docx = ["dep:docx-rs"]
# Enable OIDC/SSO authentication.
oidc = ["dep:openidconnect"]
# Enable all optional features for production builds.
full = ["onnx", "pdf", "docx", "oidc"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
